correction to white space on right side of privacy page

--- a/css/style.css
+++ b/css/style.css
@@ -481,9 +481,10 @@ input #textarea {
 
 .privacy {
     display: block;
+    position: relative;
     overflow-x: hidden;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0px;
+    margin-right: 0px;
     padding-left: 0px;
     padding-right: 0px;
 }
